       exist anymore in HEAD. (Stefan)
- BUG: Diffing/Blaming from TortoiseBlame on merged revisions did not
       work in certain situations. (Stefan)
- BUG: Unescape the target paths when exporting the changed files from
       the file diff dialog. (Stefan)
- BUG: the 'unversioned' overlay for folders didn't show up for some
       unversioned folders. (Stefan)

Version 1.5.3
- CHG: paths in error messages are nor truncated to 80 chars anymore. (Stefan)
- CHG: enabled rc4 encryption for the sasl dlls. (Stefan)
- CHG: linked against neon 0.28.3
- BUG: some context menu entries were shown if multiple items were
       selected even if they only work on single items. (Stefan)
- BUG: the move/copy right-drag menus were not shown if the target
       folder was added but not yet committed. (Stefan)
- BUG: fixed missing typecasts. This lead among others to "show log" not
       working from the check-for-modifications dialog on x64. (Stefan)
- BUG: Reverting multiple selected paths only showed the files from the first
       selected path in the revert dialog. (Stefan)
- BUG: the right-drag context menu did not show all commands for old
       working copies (fresh checkout would fix this too). (Stefan)
- BUG: Starting external applications (e.g., the diff tool) could fail if
       the working copy is on the same drive as TSVN was installed to. (Stefan)
- BUG: Upgrading could fail under certain circumstances which then required
       an uninstall, reboot, reinstall cycle. (Stefan)
- BUG: Sometimes conficts were shown as 'add's in the progress dialog. (Stefan)
- BUG: Moving a file to the "ignore-on-commit" changelist removed the check
       but the file would still get committed. (Stefan)
- BUG: When starting TortoiseProc with '*' separated, relative file paths, the 
       commit dialog would either just flash and exit or not show all the 
       files from all specified paths. (Stefan)
- BUG: TSVN would not use ssh clients set in the svn config file, only those